--- a/character/fixtures/senses.yaml
+++ b/character/fixtures/senses.yaml
@@ -1,4 +1,4 @@
-- model: character.ability
+- model: character.sense
   pk: 1
   fields:
     name: Darkvision
@@ -7,26 +7,26 @@
       You can see in dim light within 60 feet of you as if it were bright light,
       and in darkness as if it were dim light.
       You can't discern color in darkness, only shades of gray.
-- model: character.ability
+- model: character.sense
   pk: 2
   fields:
     name: Dwarven Resilience
     description: |
       You have advantage on saving throws against poison, and you have resistance against poison damage.
-- model: character.ability
+- model: character.sense
   pk: 3
   fields:
     name: Dwarven Combat Training
     description: |
       You have proficiency with the battleaxe, handaxe, light hammer, and warhammer.
-- model: character.ability
+- model: character.sense
   pk: 4
   fields:
     name: Tool Proficiency
     description: |
       You gain proficiency with the artisan's tools of your choice:
       smith's tools, brewer's supplies, or mason's tools.
-- model: character.ability
+- model: character.sense
   pk: 5
   fields:
     name: Stonecunning
@@ -34,19 +34,19 @@
       Whenever you make an Intelligence (History) check related to the origin of stonework,
       you are considered proficient in the History skill and add double your proficiency bonus
       to the check, instead of your nor- mal proficiency bonus.
-- model: character.ability
+- model: character.sense
   pk: 6
   fields:
     name: Keen Senses
     description: |
       You have proficiency in the Percep- tion skill.
-- model: character.ability
+- model: character.sense
   pk: 7
   fields:
     name: Fey Ancestry
     description: |
       You have advantage on saving throws against being charmed, and magic can't put you to sleep.
-- model: character.ability
+- model: character.sense
   pk: 8
   fields:
     name: Trance
@@ -57,20 +57,20 @@
       While meditating, you can dream after a fashion;
       such dreams are actually mental exercises that have become reflexive through years of practice.
       After resting in this way, you gain the same benefit that a human does from 8 hours of sleep.
-- model: character.ability
+- model: character.sense
   pk: 9
   fields:
     name: Lucky
     description: |
-      When you roll a 1 on the d20 for an attack roll, ability check, or saving throw,
+      When you roll a 1 on the d20 for an attack roll, sense check, or saving throw,
       you can reroll the die and must use the new roll.
-- model: character.ability
+- model: character.sense
   pk: 10
   fields:
     name: Brave
     description: |
       You have advantage on saving throws against being frightened.
-- model: character.ability
+- model: character.sense
   pk: 11
   fields:
     name: Halfling Nimbleness
