--- a/character/fixtures/races.yaml
+++ b/character/fixtures/races.yaml
@@ -12,7 +12,7 @@
   pk: 1
   fields:
     racial_trait: 1
-    ability: constitution
+    ability_type: CON
     increase: 2
 # Elf
 - model: character.racialtrait
@@ -28,7 +28,7 @@
   pk: 2
   fields:
     racial_trait: 2
-    ability: dexterity
+    ability_type: DEX
     increase: 2
 # Halfling
 - model: character.racialtrait
@@ -44,7 +44,7 @@
   pk: 3
   fields:
     racial_trait: 3
-    ability: dexterity
+    ability_type: DEX
     increase: 2
 # Human
 - model: character.racialtrait
@@ -60,37 +60,37 @@
   pk: 4
   fields:
     racial_trait: 4
-    ability: strength
+    ability_type: STR
     increase: 1
 - model: character.abilityscoreincrease
   pk: 5
   fields:
     racial_trait: 4
-    ability: dexterity
+    ability_type: DEX
     increase: 1
 - model: character.abilityscoreincrease
   pk: 6
   fields:
     racial_trait: 4
-    ability: constitution
+    ability_type: CON
     increase: 1
 - model: character.abilityscoreincrease
   pk: 7
   fields:
     racial_trait: 4
-    ability: intelligence
+    ability_type: INT
     increase: 1
 - model: character.abilityscoreincrease
   pk: 8
   fields:
     racial_trait: 4
-    ability: wisdom
+    ability_type: WIS
     increase: 1
 - model: character.abilityscoreincrease
   pk: 9
   fields:
     racial_trait: 4
-    ability: charisma
+    ability_type: CHA
     increase: 1
 
 # Common
