--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
 pre-commit = "*"
+pytest = "^7.4"
 pytest-asyncio = "*"
 pytest-django = "*"
 
