feat(game): Feature/ability checks (#179)
* docs(changelog): update info for new release

* build: upgrade dependencies

* build: upgrade pre-commit-hooks

* refactor(game): split models into several files

* feat(game): create AbilityCheckRequest model

* feat(game): create structure to perform ability check requests

* feat(game): filter by game's characters

* feat(game): enhance ability choices

* feat(game): enhance message

* build: upgrade dependencies

* build: upgrade pre-commit-hooks

* refactor(game): split models into several files

* feat(game): create AbilityCheckRequest model

* feat(game): create structure to perform ability check requests

* feat(game): filter by game's characters

* feat(game): enhance ability choices

* feat(game): enhance message

* build: upgrade dependencies

* build: upgrade pre-commit-hooks

* refactor(game): split models into several files

* feat(game): create AbilityCheckRequest model

* feat(game): create structure to perform ability check requests

* feat(game): filter by game's characters

* feat(game): enhance ability choices

* feat(game): enhance message

* feat(game): send ability check message to channel

* refactor(game): create send_to-chat() function

* refactor(game): use StrEnum instead of str for channel events

* chore(game): rename some event type to be more explicit

* chore(game): use constants instead of strings

* test(game): move emails tests into a utils module

* refactor(game): improve consumers code

* build: install pydantic

* feat(game): create GameEvent JSON schema

* feat(game): validate GameEvent schema before sending game events

* build: downgrade pytest version to 7.4.4

* fix(game): type field is necessary for channels to work

* fix(game): rename fields

* test(game): make test work with Pydantic

* chore(game): Rename function

* fix(game): fix send_to_channel() calls

* style(game): Fix comments typos



--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ email-validator = "*"
 gunicorn = "*"
 invoke = "*"
 psycopg = { extras = ["binary"], version = "*" }
+pydantic = "*"
 pyyaml = "*"
 redis = "*"
 whitenoise = "*"
@@ -43,6 +44,7 @@ django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
 pre-commit = "*"
+pytest = "^7.4"
 pytest-asyncio = "*"
 pytest-django = "*"
 
