--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,5 +53,5 @@ repos:
           [
             "-rn", # Only display messages
             "-sn", # Don't display the score
-            --disable=C0114,C0115,C0116
+            --disable=C0114,C0115,C0116,E1101
           ]
