--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,5 +54,5 @@ repos:
             "-rn", # Only display messages
             "-sn", # Don't display the score
             --disable=C0114,C0115,C0116,E1101,
-            --ignore=migrations
+            --ignore=migrations,role_play
           ]
