build: install pylint-pytest + upgrade dependencies

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: v2.2.6
     hooks:
       - id: codespell
-        exclude: "poetry.lock"
+        exclude: .git/*|poetry.lock
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v3.14.0
     hooks:
