--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: v2.2.6
     hooks:
       - id: codespell
-        exclude: .git/*|poetry.lock
+        args: ["--ignore-words=codespell-ignore-words.txt"]
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v3.14.0
     hooks:
