build(ci): Test/codecov (#190)
* build: updagrade dependencies

* build(ci): add codecov action

* docs(readme): add badge

* build(ci): generate xml coverage report

* build(ci): generate coverage report

* docs(changelog): update info

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,8 @@ jobs:
         poetry install
     - name: Run Tests
       run: |
-        poetry run invoke test.run --verbose
+        poetry run invoke test.run --verbose --coverage
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
