test(game): init test suite for process_roll() task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ pylint = "*"
 pylint-pytest = "*"
 pytest = "*"
 pytest-asyncio = "*"
+pytest-celery = "*"
 pytest-django = "*"
 
 [tool.commitizen]
