--- a/character/fixtures/senses.yaml
+++ b/character/fixtures/senses.yaml
@@ -1,7 +1,7 @@
 - model: character.sense
   pk: 1
   fields:
-    name: Darkvision
+    name: DV
     description: |
       Accustomed to life underground, you have superior vision in dark and dim conditions.
       You can see in dim light within 60 feet of you as if it were bright light,
@@ -10,26 +10,26 @@
 - model: character.sense
   pk: 2
   fields:
-    name: Dwarven Resilience
+    name: DR
     description: |
       You have advantage on saving throws against poison, and you have resistance against poison damage.
 - model: character.sense
   pk: 3
   fields:
-    name: Dwarven Combat Training
+    name: DC
     description: |
       You have proficiency with the battleaxe, handaxe, light hammer, and warhammer.
 - model: character.sense
   pk: 4
   fields:
-    name: Tool Proficiency
+    name: TP
     description: |
       You gain proficiency with the artisan's tools of your choice:
       smith's tools, brewer's supplies, or mason's tools.
 - model: character.sense
   pk: 5
   fields:
-    name: Stonecunning
+    name: SC
     description: |
       Whenever you make an Intelligence (History) check related to the origin of stonework,
       you are considered proficient in the History skill and add double your proficiency bonus
@@ -37,19 +37,19 @@
 - model: character.sense
   pk: 6
   fields:
-    name: Keen Senses
+    name: KS
     description: |
       You have proficiency in the Percep- tion skill.
 - model: character.sense
   pk: 7
   fields:
-    name: Fey Ancestry
+    name: FA
     description: |
       You have advantage on saving throws against being charmed, and magic can't put you to sleep.
 - model: character.sense
   pk: 8
   fields:
-    name: Trance
+    name: TR
     description: |
       Elves don't need to sleep. Instead, they meditate deeply, remaining semiconscious,
       for 4 hours a day.
@@ -60,19 +60,19 @@
 - model: character.sense
   pk: 9
   fields:
-    name: Lucky
+    name: LU
     description: |
       When you roll a 1 on the d20 for an attack roll, sense check, or saving throw,
       you can reroll the die and must use the new roll.
 - model: character.sense
   pk: 10
   fields:
-    name: Brave
+    name: BR
     description: |
       You have advantage on saving throws against being frightened.
 - model: character.sense
   pk: 11
   fields:
-    name: Halfling Nimbleness
+    name: HN
     description: |
       You can move through the space of any creature that is of a size larger than yours.
