--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ major_version_zero = true
 [tool.pylint.main]
 load-plugins = "pylint_pytest"
 
+[tool.ruff]
+exclude = ["role_play/asgi.py", "role_play/urls.py", "role_play/settings/*"]
+
 [tool.pytest.ini_options]
 python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
 
