--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[tool.isort]
-profile = "black"
-
 [tool.coverage.run]
 plugins = ['django_coverage_plugin']
 omit = ["manage.py", "tasks/*"]
@@ -36,7 +33,6 @@ redis = "*"
 whitenoise = "*"
 
 [tool.poetry.group.dev.dependencies]
-black = "*"
 commitizen = "*"
 coverage = "*"
 django-coverage-plugin = "*"
@@ -44,8 +40,6 @@ django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
 pre-commit = "*"
-pylint = "*"
-pylint-pytest = "*"
 pytest = "*"
 pytest-asyncio = "*"
 pytest-celery = "*"
@@ -59,8 +53,8 @@ version_provider = "poetry"
 update_changelog_on_bump = true
 major_version_zero = true
 
-[tool.pylint.main]
-load-plugins = "pylint_pytest"
+[tool.ruff]
+exclude = ["role_play/asgi.py", "role_play/urls.py", "role_play/settings/*"]
 
 [tool.pytest.ini_options]
 python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
