--- a/character/fixtures/classes.yaml
+++ b/character/fixtures/classes.yaml
@@ -1,483 +1,483 @@
 # Class advancement
 # Cleric
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 1
   fields:
     class_name: C
     level: 1
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 2
   fields:
     class_name: C
     level: 2
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 3
   fields:
     class_name: C
     level: 3
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 4
   fields:
     class_name: C
     level: 4
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 5
   fields:
     class_name: C
     level: 5
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 6
   fields:
     class_name: C
     level: 6
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 7
   fields:
     class_name: C
     level: 7
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 8
   fields:
     class_name: C
     level: 8
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 9
   fields:
     class_name: C
     level: 9
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 10
   fields:
     class_name: C
     level: 10
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 11
   fields:
     class_name: C
     level: 11
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 12
   fields:
     class_name: C
     level: 12
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 13
   fields:
     class_name: C
     level: 13
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 14
   fields:
     class_name: C
     level: 14
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 15
   fields:
     class_name: C
     level: 15
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 16
   fields:
     class_name: C
     level: 16
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 17
   fields:
     class_name: C
     level: 17
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 18
   fields:
     class_name: C
     level: 18
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 19
   fields:
     class_name: C
     level: 19
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 20
   fields:
     class_name: C
     level: 20
     proficiency_bonus: 6
 # Fighter
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 21
   fields:
     class_name: F
     level: 1
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 22
   fields:
     class_name: F
     level: 2
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 23
   fields:
     class_name: F
     level: 3
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 24
   fields:
     class_name: F
     level: 4
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 25
   fields:
     class_name: F
     level: 5
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 26
   fields:
     class_name: F
     level: 6
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 27
   fields:
     class_name: F
     level: 7
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 28
   fields:
     class_name: F
     level: 8
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 29
   fields:
     class_name: F
     level: 9
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 30
   fields:
     class_name: F
     level: 10
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 31
   fields:
     class_name: F
     level: 11
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 32
   fields:
     class_name: F
     level: 12
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 33
   fields:
     class_name: F
     level: 13
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 34
   fields:
     class_name: F
     level: 14
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 35
   fields:
     class_name: F
     level: 15
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 36
   fields:
     class_name: F
     level: 16
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 37
   fields:
     class_name: F
     level: 17
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 38
   fields:
     class_name: F
     level: 18
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 39
   fields:
     class_name: F
     level: 19
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 40
   fields:
     class_name: F
     level: 20
     proficiency_bonus: 6
 # Rogue
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 41
   fields:
     class_name: R
     level: 1
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 42
   fields:
     class_name: R
     level: 2
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 43
   fields:
     class_name: R
     level: 3
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 44
   fields:
     class_name: R
     level: 4
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 45
   fields:
     class_name: R
     level: 5
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 46
   fields:
     class_name: R
     level: 6
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 47
   fields:
     class_name: R
     level: 7
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 48
   fields:
     class_name: R
     level: 8
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 49
   fields:
     class_name: R
     level: 9
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 50
   fields:
     class_name: R
     level: 10
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 51
   fields:
     class_name: R
     level: 11
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 52
   fields:
     class_name: R
     level: 12
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 53
   fields:
     class_name: R
     level: 13
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 54
   fields:
     class_name: R
     level: 14
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 55
   fields:
     class_name: R
     level: 15
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 56
   fields:
     class_name: R
     level: 16
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 57
   fields:
     class_name: R
     level: 17
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 58
   fields:
     class_name: R
     level: 18
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 59
   fields:
     class_name: R
     level: 19
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 60
   fields:
     class_name: R
     level: 20
     proficiency_bonus: 6
 # Wizard
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 61
   fields:
     class_name: W
     level: 1
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 62
   fields:
     class_name: W
     level: 2
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 63
   fields:
     class_name: W
     level: 3
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 64
   fields:
     class_name: W
     level: 4
     proficiency_bonus: 2
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 65
   fields:
     class_name: W
     level: 5
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 66
   fields:
     class_name: W
     level: 6
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 67
   fields:
     class_name: W
     level: 7
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 68
   fields:
     class_name: W
     level: 8
     proficiency_bonus: 3
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 69
   fields:
     class_name: W
     level: 9
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 70
   fields:
     class_name: W
     level: 10
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 71
   fields:
     class_name: W
     level: 11
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 72
   fields:
     class_name: W
     level: 12
     proficiency_bonus: 4
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 73
   fields:
     class_name: W
     level: 13
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 74
   fields:
     class_name: W
     level: 14
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 75
   fields:
     class_name: W
     level: 15
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 76
   fields:
     class_name: W
     level: 16
     proficiency_bonus: 5
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 77
   fields:
     class_name: W
     level: 17
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 78
   fields:
     class_name: W
     level: 18
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 79
   fields:
     class_name: W
     level: 19
     proficiency_bonus: 6
-- model: character.classadvancement
+- model: character.klassadvancement
   pk: 80
   fields:
     class_name: W
