--- a/character/fixtures/languages.yaml
+++ b/character/fixtures/languages.yaml
@@ -46,3 +46,56 @@
     name: orc
     language_type: S
     script: dwarvish
+- model: character.language
+  pk: 8
+  fields:
+    name: orc
+    language_type: S
+    script: dwarvish
+- model: character.language
+  pk: 9
+  fields:
+    name: abyssal
+    language_type: E
+    script: infernal
+- model: character.language
+  pk: 10
+  fields:
+    name: celestial
+    language_type: E
+    script: celestial
+- model: character.language
+  pk: 11
+  fields:
+    name: deep_speech
+    language_type: E
+- model: character.language
+  pk: 12
+  fields:
+    name: draconic
+    language_type: E
+    script: draconic
+- model: character.language
+  pk: 13
+  fields:
+    name: infernal
+    language_type: E
+    script: infernal
+- model: character.language
+  pk: 14
+  fields:
+    name: primordial
+    language_type: E
+    script: dwarvish
+- model: character.language
+  pk: 15
+  fields:
+    name: sylvan
+    language_type: E
+    script: elvish
+- model: character.language
+  pk: 16
+  fields:
+    name: undercommon
+    language_type: S
+    script: elvish
