add game flow class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dice = "*"
 dj-database-url = "*"
 django = "~=5.0"
 django-extensions = "*"
-django-fsm = "*"
+django-viewflow = "*"
 email-validator = "*"
 gunicorn = "*"
 invoke = "*"
